--- a/build.yaml
+++ b/build.yaml
@@ -7,8 +7,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: enki42_left
+    shield: corned_left
   - board: nice_nano_v2
-    shield: enki42_right
+    shield: corned_right
   - board: nice_nano_v1
-    shield: enki42_dongle
+    shield: corned_dongle
