--- a/build.yaml
+++ b/build.yaml
@@ -10,5 +10,5 @@ include:
     shield: corned_left
   - board: nice_nano_v2
     shield: corned_right
-  - board: nice_nano_v1
+  - board: nice_nano
     shield: corned_dongle
